--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
+    "classnames": "^2.3.1",
+    "faker": "5.5.3",
+    "firebase": "^9.6.7",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
