--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Solidus1986.github.io/boarding",
   "name": "boarding",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "classnames": "^2.3.1",
     "faker": "5.5.3",
     "firebase": "^9.6.7",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
@@ -28,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
