fix error deploy 3

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Solidus1986.github.io/boarding",
+  "homepage": "http://Solidus1986.github.io/boarding-trade",
   "name": "boarding",
   "version": "0.1.0",
   "private": true,
